# Computer-Graphics-Lab

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: main.cpp
src/app/: App.cpp  App.h
src/objects/: Camera.cpp  Camera.h  ComponentRender.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Texture.cpp  Texture.h
src/objects/Light/: DirLight.cpp  DirLight.h  Light.cpp  Light.h  Pointlight.cpp  Pointlight.h
src/render/: Shader.cpp  Shader.h
src/shaders/: shader-view.fs  shader-view.vs  shader.fs  shader.vs
